// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Grouping Group creation creates a group from multiple blocks of different types via block transforms 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Group creation creates a group from multiple blocks of different types via options toolbar 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Group creation creates a group from multiple blocks of the same type via block transforms 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:paragraph -->
<p>First Paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second Paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Third Paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Group creation creates a group from multiple blocks of the same type via options toolbar 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:paragraph -->
<p>First Paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second Paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Third Paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Group creation groups and ungroups multiple blocks of different types via options toolbar 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Group creation groups and ungroups multiple blocks of different types via options toolbar 2`] = `
"<!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`Block Grouping Keyboard shortcuts groups and ungroups using keyboard shortcuts 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Keyboard shortcuts groups and ungroups using keyboard shortcuts 2`] = `
"<!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`Block Grouping Keyboard shortcuts groups using keyboard shortcut 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Keyboard shortcuts ungroups using keyboard shortcut 1`] = `
"<!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`Block Grouping Preserving selected blocks attributes preserves width alignment settings of selected blocks 1`] = `
"<!-- wp:group {\\"align\\":\\"full\\"} -->
<div class=\\"wp-block-group alignfull\\"><!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image {\\"align\\":\\"full\\"} -->
<figure class=\\"wp-block-image alignfull\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"align\\":\\"wide\\"} -->
<figure class=\\"wp-block-image alignwide\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->"
`;

exports[`Block Grouping Ungrouping ungroups an existing group via options menu 1`] = `
"<!-- wp:heading -->
<h2>Group Heading</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>Some paragraph</p>
<!-- /wp:paragraph -->"
`;
